--- a/Chris/LogReg.ipynb
+++ b/Chris/LogReg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -39,10 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Split training and test set into x and y\n",
@@ -54,12 +52,12 @@
     "\n",
     "x_train_t = scaler_t.fit_transform(train_data[:, 1:])\n",
     "\n",
-    "x_test = scaler.transform(test_data)"
+    "x_test = scaler_t.transform(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +71,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  30 out of  30 | elapsed:    8.2s finished\n"
+      "[Parallel(n_jobs=4)]: Done  30 out of  30 | elapsed:   11.6s finished\n"
      ]
     },
     {
@@ -91,7 +89,7 @@
        "       scoring=None, verbose=1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([ 0.42898669,  0.51797271,  0.53793268,  0.57497983,  0.5412488 ,\n",
-       "         0.50773516]),\n",
-       " 'mean_score_time': array([ 0.00060043,  0.0004003 ,  0.0014008 ,  0.00472722,  0.00392537,\n",
-       "         0.00040069]),\n",
+       "{'mean_fit_time': array([ 0.71630435,  0.93466167,  0.99430351,  0.98589845,  1.02612581,\n",
+       "         1.17162762]),\n",
+       " 'mean_score_time': array([ 0.00620475,  0.00760612,  0.0038034 ,  0.00700493,  0.00480371,\n",
+       "         0.00460458]),\n",
        " 'mean_test_score': array([ 0.85365,  0.8534 ,  0.85335,  0.8535 ,  0.8535 ,  0.85345]),\n",
        " 'mean_train_score': array([ 0.8760125,  0.876025 ,  0.8761   ,  0.8761875,  0.8762125,\n",
        "         0.8761875]),\n",
@@ -149,17 +147,17 @@
        " 'split4_test_score': array([ 0.8505 ,  0.85025,  0.85025,  0.85025,  0.85025,  0.85025]),\n",
        " 'split4_train_score': array([ 0.8768125,  0.8769375,  0.877    ,  0.8770625,  0.877125 ,\n",
        "         0.877125 ]),\n",
-       " 'std_fit_time': array([ 0.0642352 ,  0.04198474,  0.06488546,  0.04272211,  0.08581207,\n",
-       "         0.08835685]),\n",
-       " 'std_score_time': array([ 0.00120087,  0.00080061,  0.00120084,  0.00544937,  0.00591698,\n",
-       "         0.00080137]),\n",
+       " 'std_fit_time': array([ 0.23725882,  0.11716567,  0.13669871,  0.13432202,  0.13693612,\n",
+       "         0.12983386]),\n",
+       " 'std_score_time': array([ 0.00325189,  0.0087151 ,  0.00074875,  0.00751469,  0.00222819,\n",
+       "         0.00102067]),\n",
        " 'std_test_score': array([ 0.0032311 ,  0.00341541,  0.00347347,  0.00364005,  0.00374166,\n",
        "         0.00369594]),\n",
        " 'std_train_score': array([ 0.00122627,  0.00120714,  0.00121809,  0.00125312,  0.00126095,\n",
        "         0.00119177])}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
