--- a/Report/cs155_kaggle.tex
+++ b/Report/cs155_kaggle.tex
@@ -49,13 +49,13 @@
 	\begin{itemize}
 		
 		\item \boldline{Group members} \\
-		% Insert text here.
+		Christopher Zhen, David Wang, and Praful Vasireddy.
 		
 		\item \boldline{Team name} \\
-		% Insert text here.
+		trust the process
 		
 		\item \boldline{Division of labour} \\
-		% Insert text here.
+		Praful Vasireddy- tuned hyperparameters and tested gradient boosting model.
 		
 	\end{itemize}
 	
@@ -68,7 +68,12 @@
 		\item \boldline{Models and techniques tried}
 		\begin{itemize}
 			% Insert text here. Bullet points can be made using '\item'. Models and techniques should be bolded using '\textbf{}'.
-			\item \textbf{Bullet:} Bullet text.
+			\item \textbf{Random Forest:} Bullet text.
+			\item \textbf{Neural Network:} Bullet text.
+			\item \textbf{Gradient Boosting (xgboost):} Used hyperopt package for optimization of hyperparameters, tried tf-idf normalization for data, and tried different cross validation sizes.
+			\item \textbf{Logistic Regression:} Bullet text.
+			\item \textbf{Naive Bayes:} Bullet text.
+			\item \textbf{Ensembling:} Bullet text.
 		\end{itemize}
 		
 		\item \boldline{Work timeline}
